# youtube-metadata-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  initialData.json
.github/workflows/: build-and-test.yml
src/: endpoints.rs  error.rs  lib.rs  model.rs  parsing.rs  types.rs
src/model/: id.rs  search.rs  thumbnail.rs
src/parsing/: mod.rs  search.rs  video_information.rs
src/tests/: endpoints.rs  endpoints_test.rs  mod.rs
