[package]
name = "youtube-metadata"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
description = "YouTube video metadata fetcher"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
scraper = "0.12.0"
thiserror = "1.0.24"
lazy_static = "1.4.0"

[dev-dependencies]
tokio = {version = "1.5.0", features = ["macros", "rt-multi-thread"]}