[package]
name = "youtube-metadata"
version = "0.2.0"
authors = [
	"trivernis <trivernis@protonmail.com>",
	"Vilgot Fredenberg <vilgot@fredenberg.xyz>",
]
edition = "2018"
description = "YouTube video metadata fetcher"
readme = "README.md"
repository = "https://github.com/Trivernis/youtube-metadata-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
reqwest = { default-features = false, version = "0.11.3" }
regex = "1"
serde = { features = ["derive"], optional = true, version = "1" }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], version = "1.5.0" }

[features]
default = ["native"]
native = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
